re-solved bug, removed converting the lowercase.